<resources>
    <string name="app_name">Authentication</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="google">Login with google button</string>
    <string name="newUser">If you are new user click</string>
    />
    <string name="registration"> Registration</string>
    <string name="login">login</string>
    />
</resources>